--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
 ansiwrap
 attrs
 colorama
+crunch64==0.3.1
 cxxfilt
 intervaltree
 n64img==0.2.1
 pycparser
+pygfxd==1.0.2
 pylibyaml
 pynacl
 pypng
 python-Levenshtein
 python-ranges
 pyyaml
-rabbitizer==1.8.0
-spimdisasm==1.19.0
+rabbitizer==1.91
+spimdisasm==1.21.0
 toml
 tqdm
 watchdog
