--- a/sssv.us.yaml
+++ b/sssv.us.yaml
@@ -3698,6 +3698,7 @@ segments:
     - [0x6A7A80, c, overlay2_6A7A80]
     - [0x6AB090, c, overlay2_6AB090]
     - [0x6AC360, c, overlay2_6AC360]
+    - [0x6AC6B0, c, overlay2_6AC6B0]
     - [0x6ACE80, c, overlay2_6ACE80]
     - [0x6ACF20, c, overlay2_6ACF20]
     - [0x6AE5A0, c, overlay2_6AE5A0]
@@ -3808,7 +3809,7 @@ segments:
     - [0x7B1B90, data] #
     - [0x7B1BA0, .data, overlay2_6A7A80] # D_803A04F0_7B1BA0
     - [0x7B1BB0, .data, overlay2_6AB090] # D_803A0500_7B1BB0
-    - [0x7B1BC0, .data, overlay2_6AC360] # D_803A0510_7B1BC0 overlay2_6AC360
+    - [0x7B1BC0, .data, overlay2_6AC6B0] # D_803A0510_7B1BC0
     - [0x7B1BE0, data] # D_803A0530_7B1BE0
     - [0x7B1C30, .data, overlay2_6AE5A0] # D_803A0580_7B1C30 overlay2_6ACF20
     - [0x7B1C60, .data, overlay2_6B5A40] # D_803A05B0_7B1C60
