--- a/sssv.us.yaml
+++ b/sssv.us.yaml
@@ -251,11 +251,12 @@ segments:
     - [0x2FA70, data] # tbd
     - [0x2FC00, .data, main_78F0]
     - [0x2FD80, data] # .data for audiomgr
-    - [0x309C0, rgba16, img/309C0, 32, 64] # CH # D_801552C0
-    - [0x319C0, rgba16, img/319C0, 32, 32] # .  # D_801562C0
-    - [0x321C0, rgba16, img/321C0, 32, 32] # |  # D_80156AC0
-    - [0x329C0, rgba16, img/329C0, 32, 32] # 1  # D_801572C0
-    - [0x331C0, rgba16, img/331C0, 32, 32] # 0  # D_80157AC0
+    - [0x309C0, rgba16, img/309C0, 32, 32] # C # D_801552C0
+    - [0x311C0, rgba16, img/311C0, 32, 32] # H # D_801552C0
+    - [0x319C0, rgba16, img/319C0, 32, 32] # . # D_801562C0
+    - [0x321C0, rgba16, img/321C0, 32, 32] # | # D_80156AC0
+    - [0x329C0, rgba16, img/329C0, 32, 32] # 1 # D_801572C0
+    - [0x331C0, rgba16, img/331C0, 32, 32] # 0 # D_80157AC0
     - [0x339C0, .data, data/D_801582C0]
     - [0x33B20, .data, data/D_80158420]
     - [0x33BA0, .data, data/D_801584A0]
@@ -322,6 +323,7 @@ segments:
     - [0x38E10, rodatabin, gspF3DEX_fifoData]
     - [0x39610, rodatabin, aspMainData]
     # bss
+    # ~ 0xE0FB0 bytes of bss here
     - [0x398D0, .bss, core/audiomgr]
     # lots more bss here
     - [0x398D0, .bss, core/thread1]
@@ -757,7 +759,7 @@ segments:
     - [0x5A190, sssv_vtx, data/inc/D_010208C0_5A190]
     - [0x5A220, .data, data/D_01020950_5A220]
     - [0x5A280, bin] # D_010209B0_5A280 I4, 128x16, lightning bolt?
-    - [0x5A680, bin] # D_01020DB0_5A680 bunch of textures/palettes
+    - [0x5A680, bin] # D_01020DB0_5A680 bunch of textures/palettes, 16x256
     - [0x5AE80, bin] # D_010215B0_5AE80
     - [0x5B480, bin] # D_01021BB0_5B480 I4
     - [0x5BD80, ci4, img/bear.D_010224B0_5BD80, 32, 32] # D_010224B0_5BD80
@@ -765,7 +767,7 @@ segments:
     - [0x5BFA0, bin] # D_010226D0_5BFA0 16x16 I4
     - [0x5C020, bin] # 16x16 I4
     - [0x5C0A0, bin] # 16x16 I4 100, 200, 500
-    - [0x5C7A0, bin] # D_01022ED0_5C7A0 16x16 I4
+    - [0x5C7A0, bin] # D_01022ED0_5C7A0 16x16 I4 leaves?
     - [0x5CEA0, bin] # D_010235D0_5CEA0 16x16 I4 "Z" (polar bear)
     - [0x5CF20, bin] # D_01023550_5CE20 more 16x16 I4 images...
     - [0x5CFA0, bin]
@@ -814,10 +816,10 @@ segments:
     - [0x64F00, bin] # I4, 32x32
     - [0x65100, bin] #
     - [0x652E0, bin] # D_0102BA10_652E0
-    - [0x65AE0, bin] # D_0102C210_65AE0
+    - [0x65AE0, bin] # D_0102C210_65AE0, 16x256
     - [0x660E0, bin] # D_0102C810_660E0
     - [0x66100, bin] # 32x32, fan
-    - [0x662E0, bin] # D_0102CA10_662E0
+    - [0x662E0, bin] # D_0102CA10_662E0, 16x256
     - [0x66500, bin] # 32x32, fan
     - [0x66900, bin] # 32x32, fan
     - [0x66D00, bin] # 32x32, fan
@@ -838,9 +840,9 @@ segments:
     - [0x6C9E0, .data, data/D_01033110_6C9E0]
     - [0x6CA00, sssv_vtx, data/inc/D_01033130_6CA00]
     - [0x6CA40, .data, data/D_01033170_6CA40]
-    - [0x6CA60, i4, img/D_01033190_6CA60.i4, 64, 64] # 64x64, I4 (IA4?) D_01033190
+    - [0x6CA60, i4, img/D_01033190_6CA60.i4, 64, 64] # 64x64, I4 (IA4?)
     - [0x6D260, i4, img/D_01033990_6D260.i4, 64, 64] # 64x64, I4 (IA4?)
-    - [0x6DA60, i4, img/D_01034190_6DA60.i4, 64, 64] # 32x32 rgba16?
+    - [0x6DA60, i4, img/D_01034190_6DA60.i4, 64, 64] # 64x64, I4 (IA4?)
     - [0x6E260, i4, img/D_01034990_6E260.i4, 64, 64] # 64x64, I4 (IA4?)
     - [0x6EA60, bin] # D_01035190_6EA60 ia
     - [0x6F260, bin] # D_01035990_6F260
@@ -3593,9 +3595,7 @@ segments:
     - [0x63C310, c, overlay1_63C310]
     - [0x63C660, c, overlay1_63C660]
     # .data / .rodata
-    - [0x63CDD0, data] # tbd ### D_80299730
-    - [0x63D4B0, .data, overlay1_6384F0] # D_80299FC0_63D660
-    - [0x63D6F0, data] # zeroes
+    - [0x63CDD0, .data, overlay1_6384F0]
     - [0x63D700, sssv_vtx, data/inc/D_8029A060_63D700]
     - [0x63D880, sssv_vtx, data/inc/D_8029A1E0_63D880]
     - [0x63DA00, .data, data/D_8029A360_63DA00] # rocket flames 1
@@ -3608,9 +3608,9 @@ segments:
     - [0x654970, rnc, img/intro/newscaster_2, rgba16, 32, 288] # 5717 => 18432
     - [0x655FD0, rnc, img/intro/newscaster_3, rgba16, 32, 288] # 5713 => 18432
     - [0x657630, rnc, img/intro/newscaster_4, rgba16, 32, 288] # 6413 => 18432
-    - [0x658F40, bin] # D_802B58A0_658F40 texture(s)? stars?
-    - [0x659340, bin] # D_802B5CA0_659340
-    - [0x659740, bin] # D_802B60A0_659740
+    - [0x658F40, i8, img/intro/sparkling_smile_1, 32, 32] # D_802B58A0_658F40
+    - [0x659340, i8, img/intro/sparkling_smile_2, 32, 32] # D_802B5CA0_659340
+    - [0x659740, i8, img/intro/sparkling_smile_3, 32, 32] # D_802B60A0_659740
     - [0x659B40, rnc, img/intro/newscaster_5, rgba16, 32, 2560] # 24460 => 163840 # D_802B64A0
     - [0x65FAD0, rnc, img/space_background, rgba16, 160, 128]
     - [0x662810, rgba16, img/intro/200_credz, 32, 128] # chunked
@@ -3827,6 +3827,7 @@ segments:
     - [0x7B62E0, .data, sssv/animals/dog]
     - [0x7B65A0, data, sssv/animals/hippo]
     - [0x7B6780, data, sssv/animals/lion]
+    - [0x7B6950, .data, sssv/lights]
     - [0x7B6970, .data, sssv/input]
     - [0x7B6980, data, overlay2_707310]
     - [0x7B6A90, data, sssv/animals/rabbit]
@@ -3843,9 +3844,7 @@ segments:
     - [0x7B7720, .data, overlay2_739290]
     - [0x7B7B20, .data, overlay2_6ED230] # animal sound lookup table? wrong place?
     - [0x7B7C80, data] # animal sounds lookup
-    - [0x7B8370, data] # sssv/camera
-    - [0x7B83D0, bin] # sssv/camera
-    - [0x7B91C0, .data, sssv/camera]
+    - [0x7B8370, .data, sssv/camera]
     - [0x7B9580, .data, data/D_803A8290_7B9940] # green crib??
     - [0x7B9580, sssv_vtx, data/inc/D_803A7ED0]
     - [0x7B9780, sssv_vtx, data/inc/D_803A80D0]
@@ -3892,13 +3891,13 @@ segments:
     # - [0x7C87B8, bin] # pointers to displaylists # 7C87B8
     - [0x7C8880, data, sssv/ui_main_menu] # D_803B71D0
     - [0x7C8B30, .data, sssv/ui_main_menu]
-    - [0x7C8B80, rgba16, img/butterfly_thing, 32, 32]
-    - [0x7C9380, rgba16, img/butterfly1a, 32, 32]
-    - [0x7C9B80, rgba16, img/butterfly1b, 32, 32]
-    - [0x7CA380, rgba16, img/butterfly1c, 32, 32]
-    - [0x7CAB80, rgba16, img/butterfly2a, 32, 32]
-    - [0x7CB380, rgba16, img/butterfly2b, 32, 32]
-    - [0x7CBB80, rgba16, img/butterfly2c, 32, 32]
+    - [0x7C8B80, rgba16, img/butterflies, 32, 224]
+    # - [0x7C9380, rgba16, img/butterfly1a, 32, 32]
+    # - [0x7C9B80, rgba16, img/butterfly1b, 32, 32]
+    # - [0x7CA380, rgba16, img/butterfly1c, 32, 32]
+    # - [0x7CAB80, rgba16, img/butterfly2a, 32, 32]
+    # - [0x7CB380, rgba16, img/butterfly2b, 32, 32]
+    # - [0x7CBB80, rgba16, img/butterfly2c, 32, 32]
     # rodata
     - [0x7CC380, .rodata, overlay2_6A7A80]
     - [0x7CC3C0, .rodata, overlay2_6ACF20]
